<resources>
    <string name="app_name">MyHealth</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="myhealth">MyHealth</string>
    <string name="introduction">Welcome to MyHealth, the one and the only application that provides comprehensive and authentic information about COVID-19.</string>
    <string name="tools">Tools</string>
    <string name="recent_events">Recent Events</string>
    <string name="article">Article</string>
    <string name="malaysia_overview">Malaysia Overview</string>
    <string name="welcome">Welcome,</string>
    <string name="my_appointment">My Appointment</string>
    <string name="press_statement">Press Statement</string>
    <string name="rumour_clarifications">Rumour Clarifications</string>
    <string name="virus_knowledge">Virus Knowledge</string>
    <string name="title_activity_article">article</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_confirm">ConfirmActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="plus_number">+ %1$s</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="more"><![CDATA[More >]]></string>
    <string name="name">Name</string>
    <string name="enter_your_address">Enter Your Address</string>
    <string name="have_you_been_in_close_contact_with_a_confirmed_case_of_coronavirus">Have you been in close contact with a confirmed case of coronavirus?</string>
    <string name="body_temperature">Body Temperature</string>
    <string name="by_submitting_i_hereby_confirm_that_the_information_i_have_given_above_is_true_and_that_i_will_comply_with_the_terms_and_conditions_outlined_above">By submitting I hereby confirm that the information I have given above is true, and that I will comply with the terms and conditions outlined above.</string>
    <string name="first_name">First Name</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="no">No</string>
    <string name="are_you_currently_experiencing_symptoms_cough_shortness_of_breath_fever">Are you currently experiencing symptoms (cough, shortness of breath, fever)</string>
    <string name="city">City</string>
    <string name="have_you_been_to_one_of_the_covid_19_affected_countries_in_the_last_14_days">Have you been to one of the COVID-19 affected countries in the last 14 days?</string>
    <string name="yes">Yes</string>
    <string name="current_version_v2021_6_28">Current version V2021.6.28</string>
    <string name="rate_us">Rate Us</string>
    <string name="copyright">Copyright</string>
    <string name="all_rights_reserved">All Rights Reserved</string>
    <string name="select_time">Select Time:</string>
    <string name="appointment_type">Appointment Type:</string>
    <string name="submit">submit</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="address">Address</string>
    <string name="state">State</string>
    <string name="choose_your_state">Choose Your State</string>
    <string name="choose_your_city">Choose Your City</string>
    <string name="enter_your_body_temperature">Enter Your Body Temperature</string>
    <string name="i_agree">I agree</string>
    <string name="confirm">Confirm</string>
    <string name="sign_in_to_myhealth">Sign in to MyHealth!</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="re_enter_your_password">Re-Enter Your Password</string>
    <string name="enter_your_legal_name">Enter Your Legal Name</string>
    <string name="age">Age</string>
    <string name="enter_your_age">Enter Your Age</string>
    <string name="id_number">ID Number</string>
    <string name="enter_your_mykad_passport_number">Enter Your MyKad/Passport Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_country_of_destination_here">Enter Country of Destination Here</string>
    <string name="united_kingdom">United Kingdom</string>
    <string name="thailand">Thailand</string>
    <string name="mexico">Mexico</string>
    <string name="india">India</string>
    <string name="germany">Germany</string>
    <string name="france">France</string>
    <string name="china">China</string>
    <string name="canada">Canada</string>
    <string name="australia">Australia</string>
    <string name="updated_at">Updated at</string>
    <string name="unknown">Unknown</string>
    <string name="self_assessment">Self Assessment</string>
    <string name="refresh">Refresh</string>
    <string name="total_confirmed_cases">Total Confirmed Cases</string>
    <string name="total_recovered_cases">Total Recovered Cases</string>
    <string name="total_active_cases">Total Active Cases</string>
    <string name="total_death_cases">Total Death Cases</string>
    <string name="travel_advice">Travel\nAdvice</string>
    <string name="pandemic_map">Pandemic\nMap</string>
    <string name="faq">FAQ</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="password">Password</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="phone">Phone</string>
    <string name="simplified_chinese">Simplified Chinese</string>
    <string name="traditional_chinese">Traditional Chinese</string>
    <string name="chinese" translatable="false">简体中文</string>
    <string name="english" translatable="false">English</string>
    <string name="bahasa_melayu" translatable="false">Bahasa Melayu</string>
    <string name="home">Home</string>
    <string name="appointment">Appointment</string>
    <string name="me">Me</string>
    <string name="phone_number">Phone Number</string>
    <string name="notification">Notification</string>
    <string name="language">Language</string>
    <string name="about_us">About Us</string>
    <string name="sign_out">Sign out</string>
    <string name="welcome_to_myhealth">Welcome to MyHealth!</string>
    <string name="no_upcoming_events">No Upcoming Events</string>
    <string name="make_appointments_for_events">Make Appointments for Events</string>
    <string name="please_do_self_assessment_first">Please do self-assessment first</string>
    <string name="qr_code_not_available">QR CODE NOT AVAILABLE</string>
    <string name="have_been_vaccinated">have been vaccinated</string>
    <string name="have_been_tested">have been tested</string>
    <string name="_2600k">2600k+</string>
    <string name="_125k">125k+</string>
    <string name="vaccine">Vaccine</string>
    <string name="get_vaccinated_now">Get Vaccinated Now</string>
    <string name="_200">200+</string>
    <string name="medical_centers">Medical Centers</string>
    <string name="_100k">100k+</string>
    <string name="doctors">Doctors</string>
    <string name="pcr_test">PCR Test</string>
    <string name="make_an_appointment">Make an Appointment</string>
    <string name="location_not_available_toast">Location service is not available in this device!</string>
    <string name="grant_permission_toast">Please grant the permission!</string>
    <string name="network_error_toast">Network Error! Statistics haven\'t been updated.</string>
    <string name="not_updated_toast">Today\'s data has not been updated yet! All the differences are set to 0.</string>
    <string name="FAQ_Q1">What is Coronavirus?</string>
    <string name="FAQ_Q2">What are the symptoms of COVID-19?</string>
    <string name="FAQ_Q3">How can I protect myself from COVID-19?</string>
    <string name="FAQ_Q4">Who is most at risk of severe illness from COVID-19?</string>
    <string name="FAQ_Q5">What is COVID-19 vaccine?</string>
    <string name="FAQ_Q6">Have you been fully vaccinated?</string>
    <string name="FAQ_Q7">Benefits of getting a COVID-19 vaccine.</string>
    <string name="FAQ_Q8">Are there any side-effects of getting COVID-19 vaccine?</string>
    <string name="FAQ_A1">Coronaviruses are a type of virus. There are many different kinds, and some cause disease. A coronavirus identified in 2019, SARS-CoV-2, has caused a pandemic of respiratory illness, called COVID-19.</string>
    <string name="FAQ_A2">People of all ages who experience fever and/or cough associated with difficulty breathing or shortness of breath, chest pain or pressure, or loss of speech or movement should seek medical care immediately. If possible, call your health care provider, hotline or health facility first, so you can be directed to the right clinic.</string>
    <string name="FAQ_A3">It’s important to understand that the new coronavirus spreads mainly from person to person. If an infected person coughs or sneezes, their droplets can infect people nearby. That’s why it’s important to avoid close contact with others. Understand that people (including children) may be infected with the new coronavirus and have only mild symptoms.</string>
    <string name="FAQ_A4">People aged 60 years and over, and those with underlying medical problems like high blood pressure, heart and lung problems, diabetes, obesity or cancer, are at higher risk of developing serious illness.</string>
    <string name="FAQ_A5">On 15 June 2021, the Malaysia Ministry of Health (KKM) announced that both the CanSino and Janssen COVID–19 Vaccine against COVID1-9 received conditional approval. Both of these vaccines are used to prevent COVID-19.</string>
    <string name="FAQ_A6">If you don’t meet these requirements, regardless of your age, you are NOT fully vaccinated. Keep taking all precautions until you are fully vaccinated.</string>
    <string name="FAQ_A7">COVID-19 vaccination will help keep you from getting COVID-19.</string>
    <string name="FAQ_A8">COVID-19 vaccines are safe, and getting vaccinated will help protect you against developing severe COVID-19 disease and dying from COVID-19. You may experience some mild side effects after getting vaccinated, which are signs that your body is building protection.</string>
    <string name="distance">Distance: %1$s km</string>
    <string name="agree_terms_toast">Please agree the terms and conditions!</string>
    <string name="select_language">Language</string>
    <string name="travel_advice_no_new_line">Travel Advice</string>
    <string name="pandemic_map_no_new_line">Pandemic Map</string>
    <string name="confirm_appointment">Confirm</string>
    <string name="enter_all_fields_toast">Please enter all the fields</string>
    <string name="sign_in_toast">Sign In Successfully!</string>
    <string name="wrong_password_toast">Wrong Password. Try Again!</string>
    <string name="user_not_exist_toast">User doesn\'t exists. Please sign up instead!</string>
    <string name="sign_up_toast">Sign Up Successfully!</string>
    <string name="user_exist_toast">User already exists. Please sign in instead!</string>
    <string name="password_not_match_toast">Passwords don\'t match. Please try again!</string>
    <string name="register_fail_toast">Registration Failed!</string>
    <string name="select_time_toast">Please select time!</string>
    <string name="submit_toast">Submit Successfully!</string>
    <string name="select_date_toast">Please select date!</string>
    <string name="thanks_for_rating_toast">Thanks for your rating!</string>
</resources>