<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24"
        />

    <item
        android:id="@+id/appointmentFragment"
        android:title="@string/appointment"
        android:icon="@drawable/ic_baseline_fact_check_24"
        />

    <item
        android:id="@+id/codeFragment"
        android:title=" "
        />

    <item
        android:id="@+id/articleFragment"
        android:title="@string/article"
        android:icon="@drawable/ic_baseline_text_snippet_24"
        />

    <item
        android:id="@+id/meFragment"
        android:title="@string/me"
        android:icon="@drawable/ic_baseline_person_24"
        />
</menu>