<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/health_green"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/SignUpText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:layout_marginHorizontal="32dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="30sp"
             />

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CustomCardCorners">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom">

            <TextView
                android:id="@+id/PhoneText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/phone"
                style="@style/SignLabel"/>

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_phone_number"
                style="@style/SignText"
                android:layout_below="@id/PhoneText"/>

            <TextView
                android:id="@+id/PasswordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/password"
                style="@style/SignLabel"
                android:layout_below="@id/phone"/>

            <EditText
                android:id="@+id/password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_password"
                style="@style/SignText"
                android:layout_below="@id/PasswordText"/>

            <TextView
                android:id="@+id/RePasswordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/confirm_password"
                style="@style/SignLabel"
                android:layout_below="@+id/password"/>

            <EditText
                android:id="@+id/repassword"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/re_enter_your_password"
                style="@style/SignText"
                android:layout_below="@+id/RePasswordText"/>

            <TextView
                android:id="@+id/NameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/name"
                style="@style/SignLabel"
                android:layout_below="@+id/repassword"/>

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_legal_name"
                style="@style/SignText"
                android:layout_below="@+id/NameText"/>

            <TextView
                android:id="@+id/AgeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/age"
                style="@style/SignLabel"
                android:layout_below="@+id/name"/>

            <EditText
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_age"
                style="@style/SignText"
                android:layout_below="@+id/AgeText"/>

            <TextView
                android:id="@+id/IDNumberText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/id_number"
                style="@style/SignLabel"
                android:layout_below="@+id/age"/>

            <EditText
                android:id="@+id/idnumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_mykad_passport_number"
                style="@style/SignText"
                android:layout_below="@+id/IDNumberText"/>

            <Button
                android:id="@+id/btnsignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="40dp"
                android:background="@drawable/button_rounded_corner"
                android:fontFamily="@font/montserrat"
                android:text="@string/sign_up"
                android:layout_below="@+id/idnumber"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>




</LinearLayout>