<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/health_green"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/WelcomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginHorizontal="32dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/SignInText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/sign_in_to_myhealth"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CustomCardCorners">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/PhoneText"
                style="@style/SignLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/phone" />

            <EditText
                android:id="@+id/phone"
                style="@style/SignText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:hint="@string/enter_your_phone_number"
                android:layout_below="@id/PhoneText"/>

            <TextView
                android:id="@+id/PasswordText"
                style="@style/SignLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/password"
                android:layout_below="@id/phone"/>

            <EditText
                android:id="@+id/password"
                style="@style/SignText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:layout_below="@id/PasswordText"/>

            <Button
                android:id="@+id/btnsignin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginHorizontal="40dp"
                android:background="@drawable/button_rounded_corner"
                android:fontFamily="@font/montserrat"
                android:text="@string/sign_in"
                android:textStyle="bold"
                android:layout_below="@id/password"/>

            <TextView
                android:id="@+id/btnsignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/don_t_have_an_account_sign_up"
                android:textAlignment="center"
                android:textColor="@color/health_green"
                android:textSize="16sp"
                android:layout_below="@+id/btnsignin"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>